# humps

./: .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Makefile  Pipfile  README.md  pylintrc  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
artwork/: Github Social.sketch
docs/: Makefile  api.rst  conf.py  index.rst
docs/user/: install.rst  quickstart.rst
humps/: __init__.py  __init__.pyi  __main__.py  compat.py  humps.py  main.py  main.pyi
tests/: test_camelize.py  test_decamelize.py  test_dekebabize.py  test_humps.py  test_kebabize.py  test_pascalize.py  test_separate_words.py
