[tool.poetry]
name = "pyhumps"
version = "3.8.0"
description = "Convert strings (and dictionary keys) between snake case, camel case and pascal case in Python."
authors = ["Nick Ficano <nficano@gmail.com>"]
license = "The Unlicense (Unlicense)"
packages = [
    { include = "humps" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pylint = "^2.12.2"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
