[bumpversion]
commit = True
tag = True
current_version = 3.0.1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:humps/__init__.py]

[coverage:run]
source = humps
omit = humps/compat.py

[pycodestyle]
max_line_length = 79
exclude = "setup.py"
