[bumpversion]
commit = True
tag = True
current_version = 3.7.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:humps/__init__.py]

[bumpversion:file:pyproject.toml]

[coverage:run]
source = humps
omit = humps/compat.py
